asyncgit/src/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__stash__stash_menu.snap
---
source: src/gitui/tests/stash.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Untracked files                                                                |
 file-two                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 added      file-one…                                                           |
                                                                                |
 Recent commits                                                                 |
────────────────────────────────────────────────────────────────────────────────|
Stash                   Arguments                                               |
z both                  -a Also save untracked and ignored files (--all)        |
a apply                 -u Also save untracked files (--include-untracked)      |
i index                                                                         |
w worktree                                                                      |
x keeping index                                                                 |
p pop                                                                           |
k drop                                                                          |
q/<esc> Quit/Close                                                              |
styles_hash: 6353e9d00db1a7d3
