asyncgit/src/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__stash__stash_working_tree_when_nothing_is_staged.snap
---
source: src/gitui/tests/stash.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Stashes                                                                        |
 stash@0 On main: test                                                          |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git stash push --include-untracked --message test                             |
Saved working directory and index state On main: test                           |
styles_hash: a21f2b277eae9406
